--- a/apps/frontend/src/components/Navigation/MainMenuStyle.css
+++ b/apps/frontend/src/components/Navigation/MainMenuStyle.css
@@ -13,7 +13,7 @@
   z-index: 99;
 }
 
-.menuContainer>div {
+.menuContainer>div:first-of-type {
   width: calc(100% - 10px);
   height: calc(100% - 10px);
   background-color: var(--couleur-secondaire);
@@ -24,7 +24,7 @@
   align-items: center;
 }
 
-.menuContainer>div>button {
+.menuContainer>div:first-of-type>button {
   position: relative;
   width: 325px;
   height: 75px;
@@ -42,17 +42,17 @@
   filter: drop-shadow(0px 6px 4px rgba(0, 0, 0, 0.25));
 }
 
-.menuContainer>div>button:first-of-type {
+.menuContainer>div:first-of-type>button:first-of-type {
   background-color: var(--couleur-important);
 }
 
-.menuContainer>div>button>img {
+.menuContainer>div:first-of-type>button>img {
   position: absolute;
   left: 25px;
   transition: transform 0.1s ease-in;
 }
 
-.menuContainer>div>button:hover img {
+.menuContainer>div:first-of-type>button:hover img {
   transform: rotate(12deg);
 }
 
