--- a/apps/frontend/src/components/Navigation/ConnexionIncrip.css
+++ b/apps/frontend/src/components/Navigation/ConnexionIncrip.css
@@ -17,7 +17,6 @@
     background-color: #F5F5F5;
     border-radius: 20px;
     width: 430px;
-    height: 430px;
     position: absolute;
     top: 50%;
     left: 50%;
@@ -63,87 +62,72 @@
 .InputForm {
     width: 337px;
     height: 42.08px;
-    display: flex;
     margin: 0 0 20px 0;
-}
-
-.InputForm input {
     display: flex;
     align-items: center;
-    text-align: left;
-    border: none;
-    padding: 0 20px;
 
-    width: 337px;
-    height: 42.08px;
     border-radius: 5px;
     background: #FFFFFF;
     box-shadow: inset 0px 1px 6px rgba(0, 0, 0, 0.25);
+}
 
+.InputForm input {
+    border: none;
+    padding: 0 20px;
+    width: 337px;
+    height: 42.08px;
+    background: none;
 
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 400;
     font-size: 13px;
     line-height: 15px;
-    display: flex;
-    align-items: center;
-
-    /* gris moyen */
-
     color: #C4C4C4;
-    font-stretch: 100;
 }
 
 
 .show-mdp-btn {
-    
-    top: 1rem;
-    right: 1rem;
-    font-size: 1.5rem;
     background-color: inherit;
     cursor: pointer;
     border: none;
-
-    position: flex;
-    align-items: center;
-    text-align: left;
-    width: 22.05px;
-    right: 10.5px;
-    top: 24.39%;
-    bottom: 24.39%;
+    margin: 0 10px;
 }
 
-.show-mdp-btn svg {
-    width: 23;
-    height: 22;
-}
 
 .Form-ConnexionIncrip p {
-    
-font-family: 'Montserrat';
-font-style: normal;
-font-weight: 400;
-font-size: 12px;
-line-height: 14px;
-display: flex;
-align-items: center;
-text-align: center;
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px;
 
-/* gris moyen */
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
 
-color: #255186;
-font-stretch: 100;
+    color: #255186;
+    font-stretch: 100;
+    margin: 0 0 15px 0;
+    cursor: pointer;
 }
 
+.Form-ConnexionIncrip p:hover {
+    color: #c82828;
+}
+
+.Form-ConnexionIncrip {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
 
 
 .PlayButton{
     display: flex;
-    flex-direction: row;
     align-items: center;
     justify-content: center;
-    width: 150px;
+    width: 175px;
     height: 40px;
     border-radius: 20px;
     background-color: #D73324;
@@ -152,7 +136,7 @@ font-stretch: 100;
     font-size: 20px;
     font-weight: bold;
     border: none;
-    margin-top: 40px;
+    margin: 20px 0px 40px 0px;
 }
   
 .cancel-btn {
