barre nav deco et co diff debut de la fonctionnalité

--- a/apps/frontend/src/components/Navigation/ConnexionIncrip.css
+++ b/apps/frontend/src/components/Navigation/ConnexionIncrip.css
@@ -51,6 +51,16 @@
 }
 
 
+.Connecter {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.Connecter > svg {
+    padding-left: 40px;
+}
+
 
 .InputForm {
 
