--- a/apps/frontend/src/pages/Apprendre/Apprendre.css
+++ b/apps/frontend/src/pages/Apprendre/Apprendre.css
@@ -43,7 +43,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 20px 30px;
+    padding: 20px 0px;
 }
 
 .PageApprendre > div:nth-of-type(2) > p {
@@ -66,18 +66,25 @@
     align-items: center;
 }
 
+.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > ul {
+    margin-bottom: 25px;
+    width: 85%;
+}
 
 .PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:first-of-type,
 .PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:nth-of-type(2) > div {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+    align-content: center;
     gap: 20px;
 }
 
 .PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:first-of-type > div,
 .PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:nth-of-type(2) > div > div {
     display: flex;
-    width: 500px;
+    width: 475px;
     box-shadow : 0px 0px 10px rgba(255, 255, 255, 0.1);
 }
 
