--- a/apps/frontend/src/pages/Apprendre/Apprendre.css
+++ b/apps/frontend/src/pages/Apprendre/Apprendre.css
@@ -3,9 +3,8 @@
     width: 1000px;
 }
 
-.PageApprendre h2 {    
-    padding: 10px;
-    margin: 15px;
+.PageApprendre h2 {  
+    margin: 45px 25px 30px 25px;
 }
 
 .PageApprendre > div:first-of-type span {
@@ -56,17 +55,46 @@
 }
 
 
-.PageApprendre > div:nth-of-type(3) {
-    margin-top: 100px;
-}
-
-.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) {    
+.PageApprendre > div:nth-of-type(3) > div {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
 
-.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > ul {
+.PageApprendre > div:nth-of-type(3) > div:first-of-type > div {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: center;
+    align-content: center;
+    gap: 20px;
+}
+
+.PageApprendre > div:nth-of-type(3) > div:first-of-type > div > div {
+    width: 970px;
+    box-shadow : 0px 0px 10px rgba(255, 255, 255, 0.1);
+}
+
+.PageApprendre > div:nth-of-type(3) > div:first-of-type > div > div > div {
+    padding: 25px 25px 25px 25px;
+}
+
+.PageApprendre > div:nth-of-type(3) > div:first-of-type > div > div > div > p{
+    padding-top: 10px;
+}
+
+.PageApprendre > div:nth-of-type(3) > div:first-of-type > div > div > div ul,
+.PageApprendre > div:nth-of-type(3) > div:nth-of-type(3) > div ul
+ {
+    margin-left: 30px;
+}
+
+
+.PageApprendre > div:nth-of-type(3) {
+    margin-top: 100px;
+}
+
+.PageApprendre > div:nth-of-type(3) > div > ul {
     margin-bottom: 25px;
     width: 85%;
 }
@@ -89,19 +117,21 @@
 }
 
 
-.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:first-of-type > div > img,
-.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:nth-of-type(2) > div > div > img {
+.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) img {
    height: 175px;
    padding: 20px 0 20px 20px;
 }
 
-.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:first-of-type> div > div,
-.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:nth-of-type(2) > div > div > div {
+.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:first-of-type> div > div {
     padding: 30px 20px;
 }
 
-.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:first-of-type > div > div > h4,
-.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:nth-of-type(2) > div > div > div > h4 {
+
+.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:nth-of-type(2) > div > div > div {
+    padding: 25px 25px 15px 25px;
+}
+
+.PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) h4 {
     padding-bottom: 10px;
 }
 
@@ -112,4 +142,23 @@
 .PageApprendre > div:nth-of-type(3) > div:nth-of-type(2) > div:nth-of-type(2) > div > div > div > p {
     margin-bottom: 10px;
 }
+
+
+.PageApprendre > div:nth-of-type(3) > div:nth-of-type(3) > div > div {
+    width: 970px;
+    box-shadow : 0px 0px 10px rgba(255, 255, 255, 0.1);
+    margin: 20px 0;
 }
+
+.PageApprendre > div:nth-of-type(3) > div:nth-of-type(3) > div > div > div {
+    padding: 25px 25px 25px 25px;
+}
+
+.PageApprendre > div:nth-of-type(3) > div:nth-of-type(3) > div > div > div h4 {
+    padding-bottom: 10px;
+}
+
+.PageApprendre > div:nth-of-type(3) > div:nth-of-type(3) > div > p {
+    padding-bottom: 5px;
+}
+
