--- a/apps/frontend/src/color.css
+++ b/apps/frontend/src/color.css
@@ -5,4 +5,6 @@
   --couleur-texteInfos: #2A3072;
   --couleur-caseNoir: #6781F1;
   --couleur-caseBlanc: #E8EDF9;
+  --font-color: #212121;
+  --main-color: #007DF0;
 }
