--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -4,12 +4,13 @@
 }
 
 *{
-  margin: 0;
-  padding: 0;
+  box-sizing: border-box;
 }
 
 body {
-  width: 100vw;
-  height: 100vh;
-  background-color: var(--couleur-principale);
+  font-size: 14px;
+  font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+  background-color: #fff;
 }
