--- a/apps/frontend/src/pages/Home/HomePageStyle.css
+++ b/apps/frontend/src/pages/Home/HomePageStyle.css
@@ -1,119 +1,576 @@
-main {
+.nav-container > img, .nav-container > h2 {
+  opacity: 0;
+  animation: navText .3s ease-out forwards;
+}
+
+.nav-links-container > span:nth-child(1) {
+  opacity: 0;
+  animation: navText 0.3s ease-out forwards 0.1s;
+}
+
+.nav-links-container > span:nth-child(2) {
+  opacity: 0;
+  animation: navText 0.3s ease-out forwards 0.2s;
+}
+
+.nav-links-container > span:nth-child(3) {
+  opacity: 0;
+  animation: navText 0.3s ease-out forwards 0.3s;
+}
+
+nav .button-container .play {
+  opacity: 0;
+  animation: fadeIn 0.3s ease-out forwards 0.4s;
+}
+
+nav .button-container .download{
+  opacity: 0;
+  animation: fadeIn 0.3s ease-out forwards 0.5s;
+}
+
+.HomePage {
+  background-color: #fff;
+  height: calc(100vh - 100px);
+  width: 100%;
+  overflow-x: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.HomePage>div {
+  width: 1400px;
+  height: 790px;
+  background-color: #fff;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.HomePage .left-container {
+  display: block;
+  width: 691px;
+  padding-left: 24px;
+  height: 100%;
+  background-color: #fff;
+  float: left;
+  position: relative;
+}
+
+.HomePage .right-container {
+  width: 410px;
+  height: 90%;
+  position: relative;
+  float: right;
+}
+
+.HomePage .right-container > div:first-of-type{
+  width: 100%;
+  height: 100%;
+  background-color: #fff;
+  border-radius: 38px 38px 22px 38px;
+  border: 3px solid #212121;
+  box-shadow: 11px 13px 0px #212121;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: slideInFadeInRight 1s ease-out forwards;
+}
+
+.HomePage .right-container img {
+  width: 365px;
+  height: auto;
+  object-fit: initial;
+}
+
+.cta-box {
+  display: flex;
+  align-items: center;
+  width: auto;
+  height: 43px;
+  position: relative;
+  z-index: 1;
+  margin-top: 20px;
+  animation: slideIn 0.8s ease-out forwards;
+}
+
+.icon {
+  width: 31px;
+  height: 31px;
+  margin-right: 11px;
+  margin-bottom: 8px;
+  margin-left: 2px;
+  background-image: url(../../images/EmojiFusee.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.text {
+  color: var(--font-color);
+  font-weight: 500;
+  font-size: 33px;
+  letter-spacing: 0;
+}
+
+.icon, .text {
+  animation: slideInFaster 0.6s ease-out forwards 0.2s;
+  opacity: 0;
+}
+
+.cta-box::before {
+  content: '';
+  display: block;
+  background-color: rgba(0, 125, 240, 0.54);
+  width: 191px;
+  height: 33px;
+  position: absolute;
+  z-index: -1;
+  top: 8px;
+}
+
+h1{
+  display: flex;
+  flex-direction: column;
+  margin-top: 27px;
+  margin-bottom: 27px;
+}
+
+h1 > span {
+  position: relative;
+  font-size: 60px;
+  font-weight: bold;
+  color: var(--font-color);
+  line-height: 79px; 
+  opacity: 0;
+}
+
+h1 > span:nth-child(1){
+  animation: slideInFadeIn 0.6s ease-out forwards;
+}
+
+h1 > span:nth-child(2){
+  animation: slideInFadeIn 0.6s ease-out forwards 0.2s;
+}
+
+h1 > span:nth-child(3){
+  animation: slideInFadeIn 0.6s ease-out forwards 0.4s;
+}
+
+h1 > span > span {
+  color: #fff;
+  background-color: var(--main-color);
+  padding: 5px 10px;
+  box-shadow: 6px 6px 0px #212121;
+}
+
+p {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 28px;
+  line-height: 130%;
+  color: var(--font-color);
+  display: flex;
+  flex-direction: column;
+}
+
+p > span {
+  opacity: 0;
+}
+
+p > span:first-of-type{
+  animation: slideInFadeIn 1s ease-out forwards 0.4s;
+}
+
+p > span:nth-of-type(2){
+  animation: slideInFadeIn 1s ease-out forwards 0.6s;
+}
+
+.HomePage .button-container {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  position: relative;
+}
+
+.HomePage .button-container>button {
+  border-radius: 17px;
+  font-size: 38px;
+  line-height: 46px;
+  text-align: center;
+  font-weight: bold;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  transform: scale(0);
+}
+
+.HomePage .button-container .button-play {
+  width: 223px;
+  height: 80px;
+  filter: drop-shadow(4px 4px 0px var(--font-color));
+  background: var(--main-color);
+  border: 2px solid var(--main-color);
+  color: #FFFFFF;
+  font-family: 'Montserrat', sans-serif;
+  animation: scaleAppear 0.7s ease-out forwards 0.8s;
+}
+
+.HomePage .button-container button svg {
+  margin-left: 6px;
+}
+
+.HomePage .button-container .button-download {
+  width: 283px;
+  height: 80px;
+  filter: drop-shadow(4px 4px 0px var(--font-color));
+  background: #fff;
+  border: 2px solid var(--font-color);
+  color: var(--font-color);
+  font-family: 'Montserrat', sans-serif;
+  margin-left: 51px;
+  animation: scaleAppear 0.7s ease-out forwards 0.9s;
+}
+
+.HomePage .button-container .button-download svg {
+  transform: translateY(4px);
+}
+
+.HomePage .button-container>svg {
+  position: absolute;
+  top: -35px;
+  left: -150px;
+  width: 133px;
+  height: 94px;
+  overflow: hidden;
+}
+
+.arrow-path {
+  stroke: #212121;
+  fill: none;
+  stroke-width: 2;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-dasharray: 1000;
+  stroke-dashoffset: 1000;
+  animation: draw 1s ease-out forwards;
+}
+
+.arrow-fill {
+  fill: #212121;
+  opacity: 0;
+  animation: fill 0.4s ease-out forwards 0.5s;
+}
+
+@keyframes draw {
+  to {
+    stroke-dashoffset: 0;
+  }
+}
+
+@keyframes fill {
+  to {
+    opacity: 1;
+  }
+}
+
+
+.pyram {
+  position: absolute;
+  top: 0;
+  right: 0;
+  opacity: 0;
+  animation: slideInFadeIn 1s ease-out forwards 0.8s;
+}
+
+.right-container .cards {
+  position: absolute;
+  border: solid 2px var(--font-color);
+  border-radius: 18px;
+  box-shadow: 6px 6px 0px var(--font-color);
+  background-color: #fff;
+  overflow: hidden;
+}
+
+.right-container .cards h3 {
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  color: var(--font-color);
+  text-align: start;
+  margin-left: 14px;
+  opacity: 0;
+  animation: cardsText 1s ease-out forwards 0.5s;
+}
+
+.right-container .cards p {
+  font-weight: normal;
+  font-size: 16px;
+  line-height: 130%;
+  color: var(--font-color);
+  text-align: start;
+  margin-left: 14px;
+  opacity: 0;
+  animation: cardsText 1s ease-out forwards 0.6s;
+}
+
+.right-container .cards:nth-of-type(2) {
+  width: 264.49px;
+  height: 180px;
+  top: 25%;
+  left: -25%;
+  transform: rotate(-8deg) translate(-50%, -50%);
+  opacity: 0;
+  animation: cardsLeft 1s ease-out forwards 0.4s;
+}
+
+.right-container .cards:nth-of-type(3) {
+  width: 265px;
+  height: 180px;
+  top: 65%;
+  left: -20%;
+  transform: rotate(4deg) translate(-50%, -50%);
+  opacity: 0;
+  animation: cardsRight 1s ease-out forwards 0.4s;
+}
+
+.responsiveCards {
+  display: none;
+  flex-direction: row;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.responsiveCards .cards {
+  width: 170px;
+  height: 133px;
+  position: relative;
+  border: solid 2px var(--font-color);
+  border-radius: 18px;
+  box-shadow: 6px 6px 0px var(--font-color);
+  background-color: #fff;
+}
+
+.responsiveCards .cards h3 {
+  font-weight: bold;
+  font-size: 14px;
+  line-height: 17px;
+  color: var(--font-color);
+  text-align: start;
+  margin-left: 10px;
+  margin-bottom: 0px;
+  margin-top: 8px;
+}
+
+.responsiveCards .cards p {
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 130%;
+  color: var(--font-color);
+  text-align: start;
+  margin-left: 10px;
+  margin-top: 2px;
+}
+
+@media screen and (max-width: 1024px) {
+  .HomePage>div {
     width: 100%;
-    height: calc(100vh - 98px);
-    background-color: var(--couleur-principale);
-    display: flex;
-    justify-content: center;
-}
-
-h1 {
-    width: 276px;
-    height: 125px;
-    position: relative;
-    overflow: hidden;
-    position: relative;
-    cursor: default;
-    margin-right: 95px;
-    margin-top: 25px;
-}
-
-h1>span:first-of-type {
-    width: 200px;
-    color: #fff;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    font-weight: Bold;
-    font-size: 64px;
-    text-align: center;
-}
-
-h1>span:last-of-type {
-    width: 229px;
-    position: absolute;
-    top: 47px;
-    left: 47px;
-    font-weight: Bold;
-    font-size: 64px;
-    text-align: center;
-    background: linear-gradient(to right, rgba(0, 124, 239, 1), rgba(0, 221, 216, 1));
-    -webkit-background-clip: text;
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-.homePage {
-    width: 100%;
-    height: 100%;
-}
-
-.homePage>div:first-of-type {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.homePage>div:last-of-type {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 45%;
-    background-color: #fff;
-    border-radius: 80px 80px 0 0;
-}
-
-.homePage>div:last-of-type>div {
-    margin: 44px auto 0 auto;
-    width: 89.7%;
-    height: 80%;
-    max-height: 368px;
-    position: relative;
-}
-
-.homePage>div:last-of-type>div>div:first-of-type {
-    display: flex;
+    height: auto;
+    padding: 20px;
     flex-direction: column;
-    height: auto;
-    justify-content: end;
-    position: absolute;
-    bottom: 28px;
+  }
 
+  .HomePage .left-container,
+  .HomePage .right-container {
+    width: 100%;
+  }
+
+  .HomePage .left-container {
+    padding-left: 0;
+  }
+
+  .HomePage .right-container {
+    display: none;
+  }
+
+  .responsiveCards {
+    display: none;
+  }
 }
 
-.homePage>div:last-of-type>div>div:first-of-type>div:first-of-type {
-    margin-bottom: 29px;
-    margin-left: -5px;
-}
 
+@media (max-width: 768px) {
+  .HomePage>div {
+    width: 100%;
+  }
 
-.homePage>div:last-of-type>div>img {
-    width: 368px;
-    height: 368px;
-    position: absolute;
-    right: 0;
-}
+  .HomePage .right-container {
+    display: none;
+  }
 
-.chessBoardBackground {
-    position: absolute;
-    top: 55%;
-    left: 50%;
-    transform: translate(-50%, -50%) rotate(-10deg);
-    width: auto;
-    height: auto;
-    padding: 8px;
-    background-color: var(--couleur-texteInfos);
-    border-radius: 30px;
-    border: solid 2px #fff;
-    display: flex;
+  .HomePage .left-container {
+    width: 95%;
+    padding: 0px;
+    margin: auto;
+  }
+
+  .text {
+    font-size: 25px;
+  }
+
+  h1 > span{
+    font-size: 33px;
+    line-height: 40px;
+  }
+
+  p {
+    font-size: 22px;
+  }
+
+  .pyram {
+    display: none;
+  }
+
+  .HomePage .button-container {
+    flex-direction: column;
     justify-content: center;
     align-items: center;
-}
+    margin-top: 40px;
+  }
 
-.chessBoardBackground>img {
-    width: 465px;
+  .button-container>svg {
+    top: 10px;
+    left: 35px;
     height: auto;
+    width: 81px;
+    transform: translate(-50%, -50%);
+  }
+
+  .button-container .button-download {
+    margin-left: 0px;
+    margin-top: 18px;
+    width: 240px;
+    height: 55px;
+    font-size: 28px;
+  }
+
+  .responsiveCards {
+    display: flex;
+  }
+
+  .button-container .button-play {
+    width: 200px;
+    height: 55px;
+    font-size: 28px;
+  }
 }
 
-.subMenu_play{
-    display: none;
+/*Animation*/
+
+@keyframes slideIn {
+  0% {
+    transform: translateX(-10%);
+  }
+  100% {
+    transform: translateX(0);
+  }
+}
+
+@keyframes fadeIn {
+  0% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  100% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInFaster {
+  0% {
+    transform: translateX(-15%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInFadeIn {
+  0% {
+    transform: translateX(-100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes slideInFadeInRight {
+  0% {
+    transform: translateX(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateX(0);
+    opacity: 1;
+  }
+}
+
+@keyframes scaleAppear {
+  0% {
+    transform: scale(0);
+  }
+  90% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+@keyframes cardsLeft {
+  0% {
+    transform:rotate(-8deg) translate(-100%,-50%);
+    opacity: 0;
+  }
+  100% {
+    transform: rotate(-8deg) translate(-50%, -50%);
+    opacity: 1;
+  }
+}
+
+@keyframes cardsRight {
+  0% {
+    transform:rotate(4deg) translate(-100%,-50%);
+    opacity: 0;
+  }
+  100% {
+    transform: rotate(4deg) translate(-50%, -50%);
+    opacity: 1;
+  }
+}
+
+@keyframes cardsText {
+  0% {
+    transform:translateY(100%);
+    opacity: 0;
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+@keyframes navText {
+  0% {
+    transform:translateY(100%);
+  }
+  100% {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
