--- a/apps/frontend/src/components/Form/LoginSignInPopUpStyle.css
+++ b/apps/frontend/src/components/Form/LoginSignInPopUpStyle.css
@@ -187,6 +187,32 @@
   margin-top: 15px;
 }
 
+.input-error {
+  animation: shake 0.82s cubic-bezier(.36,.07,.19,.97) both;
+  transform: translate3d(0, 0, 0);
+  box-shadow: 2px 2px 0px #E63946 !important;
+  border: solid 2px #E63946 !important;
+}
+
+@keyframes shake {
+  10%, 90% {
+    transform: translate3d(-1px, 0, 0);
+  }
+  
+  20%, 80% {
+    transform: translate3d(2px, 0, 0);
+  }
+
+  30%, 50%, 70% {
+    transform: translate3d(-4px, 0, 0);
+  }
+
+  40%, 60% {
+    transform: translate3d(4px, 0, 0);
+  }
+}
+
+
 @media (max-width: 768px){
   .login-PopUp>.container, .signup-PopUp>.container {
     width: 90%;
