--- a/apps/frontend/src/components/ChessGame/ChessGameEndPopup.css
+++ b/apps/frontend/src/components/ChessGame/ChessGameEndPopup.css
@@ -69,7 +69,6 @@
 .PopUpFinDePartie > div:last-of-type > div > div > div img{
   width: 85px;
   height: 85px;
-  object-fit: none;
 }
 
 .PopUpFinDePartie > div:last-of-type > div > div > div span{
@@ -114,7 +113,7 @@
   background-color: var(--main-color);
   color: #fff;
   border: none;
-  margin-top: 18px;
+  margin-top: 10px;
   margin-bottom: 12px;
 }
 
@@ -122,4 +121,63 @@
   background-color: #fff;
   color: var(--font-color);
   border: 2px solid var(--font-color);
+}
+
+.PopUpFinDePartie .partage {
+  width: 250px;
+  height: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: start;
+  margin-top: 12px;
+}
+
+.PopUpFinDePartie .partage>span {
+  color: var(--font-color);
+  font-size: 17px;
+  font-weight: bold;
+}
+
+.PopUpFinDePartie .partage>div {
+  width: 250px;
+  height: auto;
+  position: relative;
+  margin-top: 5px;
+}
+
+.PopUpFinDePartie .partage input {
+  height: 35px;
+  width: 100%;
+  border: solid 2px var(--font-color);
+  color: var(--font-color);
+  font-size: 16px;
+}
+
+.PopUpFinDePartie .partage button {
+  height: 35px;
+  width: 35px;
+  background-color: var(--font-color);
+  border: none;
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+
+.PopUpFinDePartie .partage>div span {
+  display: none;
+  color: #fff;
+  font-weight: normal;
+  font-size: 14px;
+  background-color: var(--font-color);
+  border-radius: 5px;
+  padding: 2px 5px;
+  position: absolute;
+  top: -25px;
+  right: -30px;
+}
+
+.PopUpFinDePartie .partage button:hover + span {
+  display: inline;
 }
