--- a/apps/frontend/src/pages/Home/HomePageStyle.css
+++ b/apps/frontend/src/pages/Home/HomePageStyle.css
@@ -218,6 +218,11 @@ p > span:nth-of-type(2){
 
 .HomePage .button-container button svg {
   margin-left: 6px;
+  transition: transform 0.3s ease-out;
+}
+
+.HomePage .button-container .button-play:hover svg {
+  transform: translateX(8px);
 }
 
 .HomePage .button-container .button-download {
