--- a/apps/frontend/src/components/Navigation/MainMenu/styleMenu.css
+++ b/apps/frontend/src/components/Navigation/MainMenu/styleMenu.css
@@ -76,7 +76,7 @@
   top: 8px;
 }
 
-.MainMenu .right-container > div:first-of-type{
+.MainMenu .right-container>div:first-of-type {
   width: 100%;
   height: 100%;
   background-color: #fff;
@@ -96,37 +96,37 @@
   object-fit: initial;
 }
 
-.MainMenu .elo-container{
+.MainMenu .elo-container {
   display: flex;
   flex-direction: row;
   align-items: center;
 }
 
-.MainMenu .elo-container span{
+.MainMenu .elo-container span {
   font-style: normal;
   font-weight: 700;
   font-size: 22px;
   line-height: 27px;
 }
 
-.MainMenu .elo-container > div{
+.MainMenu .elo-container>div {
   display: flex;
   flex-direction: row;
   align-items: center;
   margin-left: 15px;
 }
 
-.MainMenu .elo-container > div span{
+.MainMenu .elo-container>div span {
   margin-left: 5px;
 }
 
-.MainMenu .menu-container{
+.MainMenu .menu-container {
   display: flex;
   flex-direction: column;
   justify-content: start;
 }
 
-.MainMenu .menu-container > button{
+.MainMenu .menu-container>button {
   width: 386px;
   height: 80px;
   background: #FFFFFF;
@@ -144,50 +144,64 @@
   font-family: 'Montserrat', sans-serif;
 }
 
-.MainMenu .menu-container > button:first-of-type{
+.MainMenu .menu-container>button:first-of-type {
   margin-top: 25px;
   background-color: var(--main-color);
   color: #fff;
   border: 2px solid var(--main-color);
 }
 
-.MainMenu .menu-container > button:last-of-type{
+.MainMenu .menu-container>button:last-of-type {
   color: #E63946;
   border: 2px solid #E63946;
 }
 
-.MainMenu .menu-container > button:hover{
+.MainMenu .menu-container>button:hover {
   transform: translateY(-5px);
 }
 
 
 
-@media (max-width: 1200px){
+@media (max-width: 1200px) {
   .MainMenu>div {
     width: 95%;
   }
 }
 
-@media (max-width: 900px){
-  .MainMenu .right-container {  
+@media (max-width: 900px) {
+  .MainMenu .right-container {
     display: none;
   }
+
   .MainMenu>div {
     justify-content: center;
     align-items: center;
   }
 }
 
-@media (max-width: 450px){
+@media (max-width: 600px) {
+  .MainMenu {
+    height: calc(100vh - 50px);
+  }
+
+  .format-container {
+    align-content: space-around;
+    height: 200px;
+  }
+}
+
+@media (max-width: 450px) {
   .MainMenu .left-container {
     width: 100%;
     min-width: 100%;
     padding-left: 0;
   }
 
-  .menu-container > button{
-    width: 100%;
+  .MainMenu .menu-container>button {
+    width: 97%;
     height: 70px;
     font-size: 25px;
   }
+
+
 }
