--- a/apps/frontend/src/components/Navigation/NavBar/navStyle.css
+++ b/apps/frontend/src/components/Navigation/NavBar/navStyle.css
@@ -1,4 +1,4 @@
-nav{
+nav {
   background-color: inherit;
   height: 100px;
   width: 100%;
@@ -8,22 +8,23 @@ nav{
   align-items: center;
 }
 
-nav > .nav-container{
+nav>.nav-container {
   display: flex;
   width: auto;
+  height: 100%;
   justify-content: space-between;
   align-items: center;
   flex-direction: row;
 }
 
-nav .logo-container{
+nav .logo-container {
   display: flex;
   justify-content: center;
   align-items: center;
   cursor: pointer;
 }
 
-nav .logo-container img{
+nav .logo-container img {
   width: 65px;
   height: 65px;
   cursor: pointer;
@@ -63,7 +64,7 @@ nav h2>span:last-of-type {
   -webkit-text-fill-color: transparent;
 }
 
-nav .nav-links-container{
+nav .nav-links-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -71,7 +72,7 @@ nav .nav-links-container{
   margin-left: 80px;
 }
 
-nav .nav-links-container span{
+nav .nav-links-container span {
   font-size: 22px;
   font-weight: normal;
   color: var(--font-color);
@@ -79,7 +80,7 @@ nav .nav-links-container span{
   position: relative;
 }
 
-nav .nav-links-container span::before {  
+nav .nav-links-container span::before {
   transform: scaleX(0);
   transform-origin: bottom right;
 }
@@ -93,37 +94,40 @@ nav .nav-links-container span::before {
   content: " ";
   display: block;
   position: absolute;
-  top: 0; right: 0; bottom: 0; left: 0;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
   inset: 0 0 0 0;
   background: hsl(200 100% 80%);
   z-index: -1;
   transition: transform .3s ease;
 }
 
-nav .button-container{
+nav .button-container {
   display: flex;
   justify-content: space-between;
   align-items: center;
   min-width: 355px;
 }
 
-nav .button-container svg{
+nav .button-container svg {
   cursor: pointer;
 }
 
-nav .button-container > *:first-child {
+nav .button-container>*:first-child {
   margin-right: 10px;
 }
 
-nav .button-container > *:not(:first-child):not(:last-child) {
+nav .button-container>*:not(:first-child):not(:last-child) {
   margin: 0 10px;
 }
 
-nav .button-container > *:last-child {
+nav .button-container>*:last-child {
   margin-left: 10px;
 }
 
-nav .button-container .nav-button{
+nav .button-container .nav-button {
   width: 165px;
   height: 50px;
   border-radius: 50px;
@@ -136,29 +140,30 @@ nav .button-container .nav-button{
   font-family: 'Montserrat', sans-serif;
 }
 
-nav .button-container .play{
+nav .button-container .play {
   border: solid var(--main-color) 1px;
   color: var(--main-color);
   font-size: 25px;
   box-shadow: 3px 3px 0px var(--main-color);
 }
 
-nav .button-container .download{
+nav .button-container .download {
   border: solid var(--font-color) 1px;
   color: var(--font-color);
   font-size: 18px;
   box-shadow: 3px 3px 0px var(--font-color);
 }
 
-nav .button-container .download svg{
-  margin-left : 4px;
+nav .button-container .download svg {
+  margin-left: 4px;
 }
 
-.hamburger, .menu {
+.hamburger,
+.menu {
   display: none;
 }
 
-.menu{
+.menu {
   border-right: solid 1px var(--font-color);
 }
 
@@ -182,7 +187,7 @@ nav .button-container .download svg{
     margin-left: 20px;
   }
 
-  nav .nav-links-container span{
+  nav .nav-links-container span {
     margin-right: 12px;
   }
 
@@ -190,18 +195,19 @@ nav .button-container .download svg{
     min-width: auto;
   }
 
-  nav .button-container .nav-button:first-of-type{
+  nav .button-container .nav-button:first-of-type {
     margin-right: 12px;
   }
 }
 
 
 @media (max-width: 768px) {
-  nav{
+  nav {
     justify-content: space-between;
-    padding: 0 20px;
+    padding: 0px 10px 0px 20px; 
+    height: 50px;
   }
-  
+
   nav .nav-links-container {
     display: none;
   }
@@ -248,7 +254,27 @@ nav .button-container .download svg{
     margin-bottom: 1rem;
   }
 
-  nav h2 span{
+  nav h2 span {
     font-size: 22px;
   }
+
+  nav .logo-container img {
+    width: 45px !important;
+    height: 45px !important;
+  }
+
+  nav h2>span:first-of-type,
+  nav h2>span:last-of-type {
+    font-size: 22px;
+  }
+
+  nav h2>span:last-of-type {
+    top: 18px;
+  }
+
+  nav h2 {
+    height: 45px;
+    width: 125px;
+  }
+
 }
