--- a/apps/frontend/src/color.css
+++ b/apps/frontend/src/color.css
@@ -1,10 +1,17 @@
 :root{
-  --couleur-principale: #222931;
-  --couleur-secondaire: #4D5865;
-  --couleur-important: #D73324;
-  --couleur-texteInfos: #2A3072;
-  --couleur-caseNoir: #6781F1;
-  --couleur-caseBlanc: #E8EDF9;
-  --font-color: #212121;
   --main-color: #007DF0;
+  --couleur-caseNoir-light: #75B8F7;
+  --couleur-caseNoir-dark: #6781F1;
+  --couleur-caseBlanc-light: #E8EDF9;
+  --couleur-caseBlanc-dark: #E8EDF9;
+  --background-color-light: #fff;
+  --background-color-dark: #222931;
+  --backgroundCards-light: #fff;
+  --backgroundCards-dark: #011127;
+  --secondbackground-light: #fff;
+  --secondbackground-dark: #212121;
+  --font-color-light: #212121;
+  --font-color-dark: #fff;
+  --drop-shadow-light : #212121;
+  --drop-shadow-dark : none;
 }
