--- a/apps/frontend/src/components/ChessGame/ChatStyle.css
+++ b/apps/frontend/src/components/ChessGame/ChatStyle.css
@@ -2,8 +2,9 @@
   width: 90%;
   height: 440px;
   margin: auto;
-  background-color: var(--couleur-caseNoir);
-  border: solid 2px #E8EDF9;
+  background-color: var(--background-color);
+  border: solid 2px var(--font-color);
+  box-shadow: 4px 4px 0px var(--drop-shadow);
 }
 
 .chatContainer .messageContainer {
@@ -19,7 +20,7 @@
 .chatContainer .sendMessage {
   width: 100%;
   height: 30px;
-  border-top: solid 2px #E8EDF9;
+  border-top: solid 2px var(--font-color);
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -31,8 +32,8 @@
   height: 100%;
   margin-left: 10px;
   border: none;
-  background-color: var(--couleur-caseNoir);
-  color: #fff;
+  background-color: var(--background-color);
+  color: var(--font-color);
   font-size: 14px;
 }
 
@@ -41,5 +42,9 @@
 }
 
 .chatContainer .sendMessage input::placeholder {
-  color: #fff;
+  color: var(--font-color);
+}
+
+.chatContainer .sendMessage svg path{
+  stroke: var(--font-color);
 }
