--- a/apps/frontend/src/components/Form/LoginSignInPopUpStyle.css
+++ b/apps/frontend/src/components/Form/LoginSignInPopUpStyle.css
@@ -23,9 +23,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: #fff;
+  background-color: var(--background-color);
   border-radius: 19px;
-  border: solid 2px #212121;
+  border: solid 2px var(--font-color);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -91,12 +91,16 @@
   margin-left: 8px;
 }
 
+.login-PopUp form .input-container>div path{
+  stroke: var(--font-color);
+}
+
 .login-PopUp form .input-container input, .signup-PopUp form .input-container input {
   width: 100%;
   height: 45px;
-  border: solid 2px #212121;
+  border: solid 2px var(--font-color);
   border-radius: 7px;
-  background-color: #fff;
+  background-color: var(--secondbackground);
   padding: 11px;
   color: var(--font-color);
   box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.58);
@@ -105,7 +109,8 @@
 }
 
 .login-PopUp form .input-container input::placeholder, .signup-PopUp form .input-container input::placeholder {
-  color: #212121bb;
+  color: var(--font-color);
+  opacity: 0.7;
 }
 
 .login-PopUp form .input-container input:focus, .signup-PopUp form .input-container input:focus {
@@ -147,10 +152,18 @@
   cursor: pointer;
 }
 
+.toggle-password path{
+  fill: var(--font-color);
+}
+
+.signup-PopUp form .input-container>div path{
+  stroke: var(--font-color);
+}
+
 .switchLogSign {
   width: 100%;
   text-align: center;
-  color: #505050;
+  color: var(--font-color);
   font-size: 16px;
   font-weight: normal;
   display: flex;
@@ -172,6 +185,10 @@
   position: absolute;
   top: 20px;
   right: 20px;
+}
+
+.closePopup path{
+  fill: var(--font-color);
 }
 
 .login-PopUp .container > svg, .signup-PopUp .container > svg {
@@ -224,14 +241,9 @@
   .login-PopUp form .input-container input, .signup-PopUp form .input-container input {
     width: 100%;
     height: 45px;
-    border: solid 2px #212121;
     border-radius: 7px;
-    background-color: #fff;
     padding: 11px;
-    color: var(--font-color);
-    box-shadow: 2px 2px 0px rgba(0, 0, 0, 0.58);
     font-size: 18px;
-    color: var(--font-color);
   }
   .login-PopUp form .input-container>div label, .signup-PopUp form .input-container>div label {
     font-weight: 400;
