--- a/apps/frontend/src/components/Navigation/MainMenu/styleMenu.css
+++ b/apps/frontend/src/components/Navigation/MainMenu/styleMenu.css
@@ -1,5 +1,5 @@
 .MainMenu {
-  background-color: #fff;
+  background-color: var(--background-color);
   height: calc(100vh - 100px);
   width: 100%;
   overflow-x: hidden;
@@ -12,7 +12,7 @@
   width: 1200px;
   max-height: 790px;
   height: 100%;
-  background-color: #fff;
+  background-color: var(--background-color);
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -24,7 +24,7 @@
   width: auto;
   padding-left: 24px;
   height: 100%;
-  background-color: #fff;
+  background-color: var(--background-color);
   float: left;
   position: relative;
 }
@@ -79,10 +79,10 @@
 .MainMenu .right-container>div:first-of-type {
   width: 100%;
   height: 100%;
-  background-color: #fff;
+  background-color: var(--backgroundCards);
   border-radius: 38px 38px 22px 38px;
-  border: 3px solid #212121;
-  box-shadow: 11px 13px 0px #212121;
+  border: 3px solid var(--font-color);
+  box-shadow: 11px 13px 0px var(--font-color);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -107,6 +107,11 @@
   font-weight: 700;
   font-size: 22px;
   line-height: 27px;
+  color: var(--font-color);
+}
+
+.MainMenu .elo-container svg path{
+  fill: var(--font-color);
 }
 
 .MainMenu .elo-container>div {
@@ -129,7 +134,7 @@
 .MainMenu .menu-container>button {
   width: 386px;
   height: 80px;
-  background: #FFFFFF;
+  background: var(--secondbackground);
   border: 2px solid var(--font-color);
   filter: drop-shadow(5px 5px 0px var(--font-color));
   border-radius: 11px;
@@ -140,7 +145,7 @@
   padding-left: 10px;
   cursor: pointer;
   margin-bottom: 30px;
-  transition: all 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out;
   font-family: 'Montserrat', sans-serif;
 }
 
