Affichage des pieces dans le PlayerContainer

--- a/apps/frontend/src/components/ChessGame/PlayerContainerStyle.css
+++ b/apps/frontend/src/components/ChessGame/PlayerContainerStyle.css
@@ -15,6 +15,16 @@
   display: flex;
 }
 
+.playerContainer .piece{
+  width: 50px;
+  height: auto;
+}
+
+.playerContainer .piece img{
+  width: 100%;
+  height: auto;
+}
+
 .whitePlayer {
   flex-direction: column;
 }
