--- a/apps/frontend/src/components/ChessGame/GameControleStyle.css
+++ b/apps/frontend/src/components/ChessGame/GameControleStyle.css
@@ -8,6 +8,11 @@
   align-items: center;
 }
 
+.gameControl button{
+  background-color: inherit;
+  border: none;
+}
+
 .gameControl svg {
   cursor: pointer;
 }
