--- a/apps/frontend/src/components/Profil/PopupModifProfil.css
+++ b/apps/frontend/src/components/Profil/PopupModifProfil.css
@@ -24,7 +24,7 @@
   transform: translate(-50%, -50%);
   width: 800px;
   height: 500px;
-  background-color: #F5F5F5;
+  background-color: var(--background-color);
   border-radius: 11px;
   border: solid 2px var(--font-color);
   display: flex;
@@ -76,7 +76,7 @@
   flex-direction: column;
   justify-content: space-around;
   align-items: center;
-  background-color: #fff;
+  background-color: var(--secondbackground);
   border: solid 2px var(--font-color);
   border-radius: 5px; 
   box-shadow: 4px 4px 0px #212121;
@@ -111,6 +111,7 @@
   border: solid 2px var(--font-color);
   border-radius: 5px;
   box-shadow: 4px 4px 0px var(--font-color);
+  background-color: var(--secondbackground);
 }
 
 .PopupModifProfil > div:last-of-type > div:first-of-type > div:last-of-type > div:not(:first-of-type){
@@ -125,7 +126,7 @@
   height: 22px;
   color: var(--font-color);
   font-size: 18px;
-  background-color: #fff;
+  background-color: var(--secondbackground);
 }
 
 .PopupModifProfil > div:last-of-type > div:first-of-type > div:last-of-type {
