--- a/apps/frontend/src/components/Navigation/MainMenu/styleMenu.css
+++ b/apps/frontend/src/components/Navigation/MainMenu/styleMenu.css
@@ -200,13 +200,18 @@
     width: 100%;
     min-width: 100%;
     padding-left: 0;
+    margin-top: 15px;
   }
 
   .MainMenu .menu-container>button {
-    width: 97%;
+    width: 90%;
     height: 70px;
     font-size: 25px;
+    margin-bottom: 25px;
+    filter: drop-shadow(4px 4px 0px var(--font-color));
   }
 
-
+  .MainMenu .menu-container {
+    align-items: center;
+  }
 }
